Fixed text align center in notifications

--- a/src/index.css
+++ b/src/index.css
@@ -226,7 +226,6 @@ section#toggle-popup-state {
 }
 
 section#welcome {
-  text-align: center;
   display: block;
   margin-bottom: 3%;
 }
